--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,54 +1,7 @@
 <app-header></app-header>
 
-<!-- ======= Hero Section ======= -->
-<div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
-    <app-home></app-home>
-</div>
-<!-- End Hero Section -->
-
 <main id="main">
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about-mf sect-pt4 route">
-        <app-about></app-about>
-    </section>
-    <!-- End About Section -->
-
-    <!-- ======= Services Section ======= -->
-    <section id="services" class="services-mf pt-5 route">
-        <app-services></app-services>
-    </section>
-    <!-- End Services Section -->
-
-    <!-- ======= Counter Section ======= -->
-    <div class="section-counter paralax-mf bg-image" style="background-image: url(assets/img/counters-bg.jpg)">
-        <app-counter></app-counter>
-    </div>
-    <!-- End Counter Section -->
-
-    <!-- ======= Portfolio Section ======= -->
-    <section id="work" class="portfolio-mf sect-pt4 route">
-        <app-portafolio></app-portafolio>
-    </section>
-    <!-- End Portfolio Section -->
-
-    <!-- ======= Testimonials Section ======= -->
-    <div class="testimonials paralax-mf bg-image" style="background-image: url(assets/img/overlay-bg.jpg)">
-        <app-testimonials></app-testimonials>
-    </div>
-    <!-- End Testimonials Section -->
-
-    <!-- ======= Blog Section ======= -->
-    <section id="blog" class="blog-mf sect-pt4 route">
-        <app-blog></app-blog>
-    </section>
-    <!-- End Blog Section -->
-
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="paralax-mf footer-paralax bg-image sect-mt4 route" style="background-image: url(assets/img/overlay-bg.jpg)">
-        <app-contact></app-contact>
-    </section>
-    <!-- End Contact Section -->
+    <router-outlet></router-outlet>
 </main>
-<!-- End #main -->
 
 <app-footer></app-footer>
