--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,15 +2,15 @@
 <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-        <h1 class="logo"><a href="index.html">Juan's Portafolio</a></h1>
+        <h1 class="logo"><a routerLink="home">Juan's Portafolio</a></h1>
         <nav id="navbar" class="navbar">
             <ul>
-                <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
-                <li><a class="nav-link scrollto" href="#about">Acerca De Mí</a></li>
-                <li><a class="nav-link scrollto" href="#services">Servicios</a></li>
-                <li><a class="nav-link scrollto " href="#work">Portafolio</a></li>
-                <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
-                <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="home">Inicio</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="about">Acerca De Mí</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="services">Servicios</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="portafolio">Portafolio</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="blog">Blog</a></li>
+                <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="contact">Contacto</a></li>
             </ul>
             <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
