--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <app-header></app-header>
 
 <main id="main">
-    <router-outlet></router-outlet>
+    <app-home></app-home>
+    <app-about></app-about>
+    <app-services></app-services>
+    <app-portafolio></app-portafolio>
+    <app-blog></app-blog>
+    <app-contact></app-contact>
+    <!-- <router-outlet></router-outlet> -->
 </main>
 
 <app-footer></app-footer>
