efecto a la platilla y js adaptados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,1 @@
-<app-header></app-header>
-
-<main id="main">
-    <app-home></app-home>
-    <app-about></app-about>
-    <app-services></app-services>
-    <app-portafolio></app-portafolio>
-    <app-blog></app-blog>
-    <app-contact></app-contact>
-    <!-- <router-outlet></router-outlet> -->
-</main>
-
-<app-footer></app-footer>
+<router-outlet></router-outlet>
