--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,9 +1,9 @@
 <!-- ======= Header ======= -->
-<header id="header" [ngClass]="{'fixed-top': true, 'header-scrolled': isHeaderScrolled}">
+<header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
         <h1 class="logo"><a routerLink="home">Juan's Portafolio</a></h1>
-        <nav id="navbar">
+        <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="home">Inicio</a></li>
                 <li><a class="nav-link scrollto" routerLinkActive="active" routerLink="about">Acerca De Mí</a></li>
