--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -9,48 +9,48 @@
                             <div class="row">
                                 <div class="col-sm-6 col-md-5">
                                     <div class="about-img">
-                                        <img src="assets/img/testimonial-2.jpg" class="img-fluid rounded b-shadow-a"
+                                        <img src="assets/img/foto-perfil.jpg" class="img-fluid rounded b-shadow-a"
                                             alt="">
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-7">
                                     <div class="about-info">
-                                        <p><span class="title-s">Name: </span> <span>Morgan Freeman</span></p>
-                                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
-                                        <p><span class="title-s">Email: </span> <span>contact&#64;example.com</span></p>
-                                        <p><span class="title-s">Phone: </span> <span>(617) 557-0089</span></p>
+                                        <p><span class="title-s">Nombre: </span> <span>Juan Carlos Galarza Arias</span></p>
+                                        <p><span class="title-s">Perfil: </span> <span>Software Developer</span></p>
+                                        <p><span class="title-s">Correo: </span> <span>juancarlosl40&#64;hotmail.com</span></p>
+                                        <p><span class="title-s">Celular: </span> <span>(+593) 968772111</span></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="skill-mf">
                                 <p class="title-s">Skill</p>
-                                <span>HTML</span> <span class="pull-right">85%</span>
-                                <div class="progress">
+                                <span>HTML</span>
+                                <!-- <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <span>CSS3</span> <span class="pull-right">75%</span>
-                                <div class="progress">
+                                </div> -->
+                                <span>CSS3</span>
+                                <!-- <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75"
                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <span>PHP</span> <span class="pull-right">50%</span>
-                                <div class="progress">
+                                </div> -->
+                                <span>PHP</span> 
+                              <!--   <div class="progress">
                                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50"
                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <span>JAVASCRIPT</span> <span class="pull-right">90%</span>
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90"
+                                </div> -->
+                                <span>JAVASCRIPT</span> 
+                                <!-- <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60"
                                         aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="about-me pt-4 pt-md-0">
                                 <div class="title-box-2">
                                     <h5 class="title-left">
-                                        About me
+                                        Acerca De Mí
                                     </h5>
                                 </div>
                                 <p class="lead">
