--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,13 @@
 <!-- ======= Hero Section ======= -->
-<div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bg.jpg)">
+<div id="hero" class="hero route bg-image" style="background-image: url(assets/img/hero-bgac.jpg)">
     <div class="overlay-itro"></div>
     <div class="hero-content display-table">
         <div class="table-cell">
             <div class="container">
                 <!--<p class="display-6 color-d">Hello, world!</p>-->
-                <h1 class="hero-title mb-4">I am Ing. Juan Galarza</h1>
+                <h1 class="hero-title mb-4">Hola! Soy Juan Carlos Galarza</h1>
                 <p class="hero-subtitle"><span class="typed"
-                        data-typed-items="Developer, Designer, Engineer, DataManager"></span>
+                        data-typed-items="Engineer, Developer, Designer, DataManager"></span>
                 </p>
                 <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
             </div>
